[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/Entities/Ecyleam.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Mobs/Ecyleam/BossSoul.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Mobs/Ecyleam/Boss3_2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Mobs/Ecyleam/Boss3Dam.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Mobs/Ecyleam/Boss3_3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Mobs/Ecyleam/Boss3_4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Mobs/Ecyleam/Boss3_5.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Mobs/Ecyleam/Boss3_6.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Mobs/Ecyleam/Boss3_7.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Mobs/Ecyleam/Boss3_8.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Mobs/Ecyleam/Boss3_9.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Mobs/Ecyleam/Boss3_10.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Mobs/Ecyleam/Boss3_11.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Mobs/Ecyleam/Boss3_12.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Mobs/Ecyleam/Boss3_1.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Mobs/Ecyleam/Boss3_0.png" type="Texture" id=16]
[ext_resource path="res://Sons/boss4app.wav" type="AudioStream" id=17]
[ext_resource path="res://Sons/boss4hit.wav" type="AudioStream" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "dam",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "tp",
"speed": 20.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "dapp",
"speed": 0.5
}, {
"frames": [ ExtResource( 16 ), ExtResource( 15 ), ExtResource( 3 ) ],
"loop": true,
"name": "app",
"speed": 0.5
}, {
"frames": [ ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "tp2",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 34.4379

[node name="soldier" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 1 )

[node name="Soul" type="Sprite" parent="."]
visible = false
z_index = 20
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Soul"]
collision_layer = 32
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Soul/Area2D"]
polygon = PoolVector2Array( 2.25125, -25.2533, -1.2403, -18.4536, -4.82208, -10.0474, -7.02973, -7.46156, -7.81908, -4.85745, -13.1552, 0.186275, -13.8789, 14.7314, -13.9599, 20.077, -10.5581, 22.9928, -9.26221, 22.1019, -9.26221, 24.8557, -15.0128, 30.4443, -14.0409, 31.9022, -7.07536, 32.2262, -2.94464, 30.0393, -0.757786, 27.7715, -1.16276, 26.5566, -3.10663, 20.968, -4.32154, 17.9712, -2.94464, 14.5694, -0.109831, 11.9776, 3.12995, 12.2206, 5.15481, 13.4355, 4.02089, 16.5133, 3.21094, 24.0457, 1.10509, 27.3665, 1.26708, 29.0674, 4.34487, 30.8493, 9.36652, 32.0642, 15.0361, 31.9022, 16.1701, 30.5253, 12.0393, 26.3136, 11.8774, 25.0177, 9.93349, 23.3978, 12.2823, 23.8838, 13.4972, 23.7218, 15.1171, 21.4539, 15.9346, 10.0843, 16.0885, 3.7748, 13.934, -0.918826, 11.0101, -4.07356, 9.24042, -4.53523, 10.2407, -5.30468, 9.93292, -9.38275, 8.8557, -11.9989, 5.99197, -15.1663, 5.07313, -18.3312, 4.9662, -22.9343 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )
animation = "app"

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -4.33042, -4.24337, -6.88815, 2.06568, -4.75671, 3.34454, -5.26826, 7.01061, -4.75671, 7.77792, -7.05866, 9.99461, -7.99649, 10.8472, -7.65546, 13.0639, -5.52403, 14.769, -3.13682, 14.428, 0.188217, 11.2735, 5.72995, 12.9786, 5.81521, 15.0248, 7.94664, 16.3037, 10.2486, 14.9395, 10.6749, 12.9786, 8.11716, 8.80101, 5.38892, 6.58432, 6.92355, 5.2202, 7.00881, 1.2131, 8.79922, 0.445786, 8.11716, -4.49914, 3.68377, -6.20429, -0.408585, -6.80109, -3.73362, -5.09595 )

[node name="vision" type="Area2D" parent="."]
collision_layer = 17
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="vision"]
visible = false
position = Vector2( 1.25172, 6.25859 )
shape = SubResource( 2 )

[node name="APP" type="Timer" parent="."]

[node name="SOUL" type="Timer" parent="."]

[node name="WAIT" type="Timer" parent="."]

[node name="Hit" type="Timer" parent="."]

[node name="SoulSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[node name="SoundHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
[connection signal="body_entered" from="Soul/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="vision" to="." method="_on_vision_body_entered"]
[connection signal="timeout" from="APP" to="." method="_on_APP_timeout"]
[connection signal="timeout" from="SOUL" to="." method="_on_SOUL_timeout"]
[connection signal="timeout" from="WAIT" to="." method="_on_WAIT_timeout"]
[connection signal="timeout" from="Hit" to="." method="_on_Hit_timeout"]
